--- a/NM-html.html
+++ b/NM-html.html
@@ -18,7 +18,7 @@
       <p id="temperature"></p>
       <p id="humidity"></p>
       <p id="description"></p>
-      <img id="weather-icon" src="" alt="Weather Icon">
+      <img src="download(1).jpg">
     </div>
   </div>
   <script src="NM-js.js"></script>
